--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=MySpringBootLab
+spring.application.name=MySpringBoot
 
 myprop.username=springboot
 myprop.port=${random.int(1,100)}
@@ -8,3 +8,5 @@ spring.profiles.active=prod
 
 # log file
 logging.file.path=logs
+
+myboot.age=25
